--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "recoil": "0.0.10",
     "sockjs-client": "^1.4.0",
     "react-hook-form": "^6.15.4",
-    "node-sass": "4.14.1"
+    "node-sass": "4.14.1",
+    "prop-types": "15.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
