--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "formik": "^2.2.6",
     "node-sass": "4.14.1",
     "prop-types": "15.7.2",
     "react": "^16.13.1",
@@ -13,11 +14,12 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-scroll-to-bottom": "^3.0.0",
-    "react-stomp": "^5.0.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
-    "sockjs-client": "^1.4.0"
+    "react-stomp": "^5.0.0",
+    "sockjs-client": "^1.4.0",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,7 +42,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-
-  }
+  "devDependencies": {}
 }
