--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-scroll-to-bottom": "^3.0.0",
+    "react-scrollable-feed": "^1.3.0",
+    "react-stomp": "^5.0.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
-    "react-stomp": "^5.0.0",
     "sockjs-client": "^1.4.0",
     "yup": "^0.32.9"
   },
