--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.15.4",
+    "react-moment": "^1.1.1",
     "react-redux": "^7.2.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "react-scroll-to-bottom": "^3.0.0",
     "react-scrollable-feed": "^1.3.0",
     "react-stomp": "^5.0.0",
     "redux": "^4.0.5",
