--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "formik": "^2.2.6",
+    "moment": "^2.29.1",
     "node-sass": "4.14.1",
     "prop-types": "15.7.2",
     "react": "^16.13.1",
