--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.21.1",
     "formik": "^2.2.6",
     "moment": "^2.29.1",
     "node-sass": "4.14.1",
