--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "axios": "^0.21.1",
     "formik": "^2.2.6",
+    "material-table": "^1.69.3",
+    "@material-ui/core": "^4.10.2",
     "moment": "^2.29.1",
     "node-sass": "4.14.1",
     "prop-types": "15.7.2",
