--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.10.2",
+    "antd": "^4.15.5",
     "axios": "^0.21.1",
     "formik": "^2.2.6",
     "material-table": "^1.69.3",
-    "@material-ui/core": "^4.10.2",
     "moment": "^2.29.1",
     "node-sass": "4.14.1",
     "prop-types": "15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-hook-form": "^6.15.4",
     "react-moment": "^1.1.1",
     "react-redux": "^7.2.3",
     "react-router": "^5.2.0",
@@ -47,6 +47,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {}
+  }
 }
